add_list_admin_films_from_atlas

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -831,6 +831,53 @@ body {
   font-weight: 600;
 }
 
+.error400__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 100px;
+}
+
+.error400__container .error400__img {
+  border-radius: 5px 5px 0px 0px;
+  height: 165px;
+  width: 320px;
+}
+
+.error400__container p {
+  border-radius: 0px 0px 5px 5px;
+  margin-top: 0px;
+  background-color: #f9844a;
+  color: white;
+  font-size: 15px;
+  font-weight: 600;
+  width: 300px;
+  padding: 10px;
+}
+
+.error400__container .error__button {
+  border-radius: 50px;
+  border: transparent;
+  color: white;
+  background-color: #f9844a;
+  height: 25px;
+  width: 150px;
+}
+
+.error400__container .error__button:hover {
+  font-weight: 600;
+}
+
 @media screen and (min-width: 768px) {
   .searchone__bg__img {
     margin-right: 15px;
