--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -584,6 +584,40 @@ body {
   text-align: center;
   font-weight: 600;
 }
+//ERROR 400
+.error400__container {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  .error400__img {
+    border-radius: 5px 5px 0px 0px;
+    height: 165px;
+    width: 320px;
+  }
+  p {
+    border-radius: 0px 0px 5px 5px;
+    margin-top: 0px;
+    background-color: #f9844a;
+    color: white;
+    font-size: 15px;
+    font-weight: 600;
+    width: 300px;
+    padding: 10px;
+  }
+  .error__button {
+    border-radius: 50px;
+    border: transparent;
+    color: white;
+    background-color: #f9844a;
+    height: 25px;
+    width: 150px;
+  }
+  .error__button:hover {
+    font-weight: 600;
+  }
+}
 
 @media screen and (min-width: 768px) {
   .searchone__bg__img {
