--- a/views/movies_admin.pug
+++ b/views/movies_admin.pug
@@ -1,32 +1,33 @@
 include ./header_search_list.pug 
 div.separador_up
-main.searchone__container
-    img.searchone__bg__img(src="/assets/form_bg.jpg")
-    section.searchone__section
-        p.searchone__title=`${films.Title.toUpperCase()}`
-        img.searchone__img(src=`${films.Poster}`)
-    section.searchone__info__section
-        p.searchone__type Year
-        p.searchone__info= `${films.Year}`
-        p.searchone__type  Type
-        p.searchone__info= `${films.Type}`
-        p.searchone__type  Genre
-        p.searchone__info= `${films.Genre}`
-        p.searchone__type  Duration
-        p.searchone__info= `${films.Runtime}`
-        p.searchone__type  Director
-        p.searchone__info= `${films.Director}`
-        p.searchone__type  Cast
-        p.searchone__info= `${films.Actors}`
-        p.searchone__type  Resume
-        p.searchone__info= `${films.Plot}`
-        p.searchone__type  IMDB Rating
-        p.searchone__info= `${films.imdbRating} / 10`
-        div.searchone__botton__container
-            a(href="http://localhost:3000/mymovies")
-                button.edit__button(type="click") EDIT MOVIE
-            button.deleteFavorites(type="click")
-                img.deleteFavorites__button(type="img",src="/assets/delete_hover.png")
+each val in films
+    main.searchone__container
+        img.searchone__bg__img(src="/assets/form_bg.jpg")
+        section.searchone__section
+            p.searchone__title=`${val.title}`
+            img.searchone__img(src=`${val.poster}`)
+        section.searchone__info__section
+            p.searchone__type Year
+            p.searchone__info= `${val.year}`
+            p.searchone__type  Type
+            p.searchone__info= `${val.type}`
+            p.searchone__type  Genre
+            p.searchone__info= `${val.genre}`
+            p.searchone__type  Duration
+            p.searchone__info= `${val.duration}`
+            p.searchone__type  Director
+            p.searchone__info= `${val.director}`
+            p.searchone__type  Cast
+            p.searchone__info= `${val.cast}`
+            p.searchone__type  Resume
+            p.searchone__info= `${val.resume}`
+            p.searchone__type  IMDB Rating
+            p.searchone__info= `${val.rating} / 10`
+            div.searchone__botton__container
+                a(href="http://localhost:3000/mymovies")
+                    button.edit__button(type="click") EDIT MOVIE
+                button.deleteFavorites(type="click")
+                    img.deleteFavorites__button(type="img",src="/assets/delete_hover.png")
     a.favorites__link(href="http://localhost:3000/mymovies")
         button.gofavorites__button(type="click") MY MOVIES
     
