edit_one_mongo_movie_okey

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -163,6 +163,8 @@ body {
   font-weight: 400;
   cursor: pointer;
 }
+.mail__input,
+.pass__input,
 .signup__mail,
 .signup__surname,
 .signup__name,
