--- a/views/edit_movie.pug
+++ b/views/edit_movie.pug
@@ -1,36 +1,38 @@
-include ./header_search_list.pug 
+include ./header.pug 
 div.separador_up
 main.searchone__container
     img.searchone__bg__img(src="/assets/form_bg.jpg")
     section.searchone__section
-        p.searchone__title=`${films.Title.toUpperCase()}`
-        img.searchone__img(src=`${films.Poster}`)
+        p.searchone__title=`${films.title}`
+        img.searchone__img(src=`${films.poster}`)
     section.edit__info__section
         p.edit__title Now you can change the params...
+        p.searchone__type Title
+        input.edit__input__director(type="text", placeholder=`${films.title}`)
         div.two__inputs
             p.edit__type Year
             p.edit__type Type
         div.two__inputs
-            input.edit__input__year(type="text", placeholder=`${films.Year}`)
-            input.edit__input__type(type="text", placeholder=`${films.Type}`)
+            input.edit__input__year(type="text", placeholder=`${films.year}`)
+            input.edit__input__type(type="text", placeholder=`${films.type}`)
         div.two__inputs
             p.edit__type Genre
             p.edit__type Duration
         div.two__inputs
-            input.edit__input__genre(type="text", placeholder=`${films.Genre}`)
-            input.edit__input__duration(type="text", placeholder=`${films.Runtime}`)
+            input.edit__input__genre(type="text", placeholder=`${films.genre}`)
+            input.edit__input__duration(type="text", placeholder=`${films.runtime}`)
         p.searchone__type Director
-        input.edit__input__director(type="text", placeholder=`${films.Director}`)
+        input.edit__input__director(type="text", placeholder=`${films.director}`)
         p.searchone__type Cast
-        input.edit__input__cast(type="text", placeholder=`${films.Actors}`)
+        input.edit__input__cast(type="text", placeholder=`${films.cast}`)
         text.searchone__type Resume
         textarea.edit__input__resume(name="resume", cols="30", rows="10") 
         div.two__inputs
             p.edit__type Rating
             p.edit__type Image URL
         div.two__inputs
-            input.edit__input__rating(type="text", placeholder=`${films.imdbRating}`)
-            input.edit__input__rating(type="text", placeholder=`${films.Poster}`)
+            input.edit__input__rating(type="text", placeholder=`${films.rating}`)
+            input.edit__input__rating(type="text", placeholder=`${films.url}`)
         div.searchone__botton__container
             button.edit__button(type="click") SAVE CHANGES 
             button.deleteFavorites(type="click")
