--- a/views/movies_admin.pug
+++ b/views/movies_admin.pug
@@ -1,10 +1,10 @@
-include ./header_search_list.pug 
+include ./header.pug 
 div.separador_up
 each val in films
     main.searchone__container
         img.searchone__bg__img(src="/assets/form_bg.jpg")
         section.searchone__section
-            p.searchone__title=`${val.title}`
+            p.searchone__title=`${val.title.toUpperCase()}`
             img.searchone__img(src=`${val.poster}`)
         section.searchone__info__section
             p.searchone__type Year
@@ -14,7 +14,7 @@ each val in films
             p.searchone__type  Genre
             p.searchone__info= `${val.genre}`
             p.searchone__type  Duration
-            p.searchone__info= `${val.duration}`
+            p.searchone__info= `${val.runtime}`
             p.searchone__type  Director
             p.searchone__info= `${val.director}`
             p.searchone__type  Cast
@@ -24,10 +24,10 @@ each val in films
             p.searchone__type  IMDB Rating
             p.searchone__info= `${val.rating} / 10`
             div.searchone__botton__container
-                a(href="http://localhost:3000/mymovies")
-                    button.edit__button(type="click") EDIT MOVIE
+                a(href=`http://localhost:3000/edit/${val.title}`)
+                    button.edit__button EDIT MOVIE
                 button.deleteFavorites(type="click")
                     img.deleteFavorites__button(type="img",src="/assets/delete_hover.png")
-    a.favorites__link(href="http://localhost:3000/mymovies")
-        button.gofavorites__button(type="click") MY MOVIES
-    
+div.separador_down
+a.favorites__link(href="http://localhost:3000/mymovies")
+    button.gofavorites__button(type="click") MY MOVIES
