--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -578,6 +578,7 @@ body {
   margin-top: 5px;
 }
 
+.delete__section,
 .edit__info__section,
 .searchone__info__section {
   text-align: justify;
@@ -605,6 +606,7 @@ body {
           box-shadow: 0px 8px 13px #000000be;
 }
 
+.delete__section .searchone__type,
 .edit__info__section .searchone__type,
 .searchone__info__section .searchone__type {
   color: #f9844a;
@@ -612,6 +614,7 @@ body {
   margin: 2px 10px;
 }
 
+.delete__section .searchone__info,
 .edit__info__section .searchone__info,
 .searchone__info__section .searchone__info {
   color: #ffffff;
@@ -619,6 +622,7 @@ body {
   margin: 2px 10px;
 }
 
+.delete__section .searchone__botton__container,
 .edit__info__section .searchone__botton__container,
 .searchone__info__section .searchone__botton__container {
   display: -webkit-box;
@@ -634,6 +638,7 @@ body {
       align-self: center;
 }
 
+.delete__section .searchone__botton__container .back__button,
 .edit__info__section .searchone__botton__container .back__button,
 .searchone__info__section .searchone__botton__container .back__button {
   color: white;
@@ -648,12 +653,14 @@ body {
   cursor: pointer;
 }
 
+.delete__section .searchone__botton__container .back__button:hover,
 .edit__info__section .searchone__botton__container .back__button:hover,
 .searchone__info__section .searchone__botton__container .back__button:hover {
   font-weight: 600;
   background-color: #f9844a;
 }
 
+.delete__section .searchone__botton__container .addFavorites,
 .edit__info__section .searchone__botton__container .addFavorites,
 .searchone__info__section .searchone__botton__container .addFavorites {
   margin: 13px 13px 5px;
@@ -833,6 +840,29 @@ body {
   font-weight: 600;
 }
 
+.delete__section {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.delete__section p {
+  text-align: center;
+  margin: 10px 10px;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.delete__section .delete__gif {
+  margin: 10px 10px;
+  border-radius: 5px;
+  width: 90%;
+}
+
 .error400__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -899,6 +929,7 @@ body {
     margin-top: 0px;
     margin-left: -305px;
   }
+  .delete__section,
   .edit__info__section,
   .searchone__info__section {
     -webkit-box-pack: justify;
@@ -906,6 +937,11 @@ body {
             justify-content: space-between;
     margin: 19px 0px 0px 0px;
     height: 395px;
+  }
+  .delete__section {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .edit__info__section {
     -webkit-box-align: start;
