redirect_fixed_elephant_conexion_init

--- a/views/delete_movie.pug
+++ b/views/delete_movie.pug
@@ -10,5 +10,5 @@ main.searchone__container
         img.delete__gif(src="/assets/shredding.gif")
         div.searchone__botton__container
             button.edit__button(type="submit") YES, DELETE    
-    a.favorites__link(href="http://localhost:3000/mymovies")
-        button.gofavorites__button(type="click") MY MOVIES
+    a.favorites__link(href="http://localhost:3000/admin")
+        button.gofavorites__button(type="click") MOVIES
