--- a/views/search_one.pug
+++ b/views/search_one.pug
@@ -23,7 +23,7 @@ main.searchone__container
         p.searchone__type  IMDB Rating
         p.searchone__info= `${films.imdbRating} / 10`
         div.searchone__botton__container
-            a(href="http://localhost:3000/search")
+            a(href="http://localhost:3000/search/")
                 button.back__button(type="click") BACK
             button.addFavorites(type="click")
                 img.addFavorites__button(type="img",src="/assets/corazon.png")
