--- a/views/edit_movie.pug
+++ b/views/edit_movie.pug
@@ -35,6 +35,6 @@ main.searchone__container
             button.edit__button(type="submit") SAVE CHANGES 
             a.deleteFavorites(href=`/edit/${films.title}`)
                 img.reset__button(type="img",src="/assets/reset.png")
-    a.favorites__link(href="http://localhost:3000/mymovies")
-        button.gofavorites__button(type="click") MY MOVIES
+    a.favorites__link(href="http://localhost:3000/admin")
+        button.gofavorites__button(type="click") MOVIES
     
