--- a/views/edit_movie.pug
+++ b/views/edit_movie.pug
@@ -24,7 +24,7 @@ main.searchone__container
         p.searchone__type Cast
         input.edit__input__cast(name="cast",type="text", value=`${films.cast}`)
         text.searchone__type Resume
-        input.edit__input__resume(name="resume", cols="30", rows="10", value=`${films.resume}`)
+        input.edit__input__resume(type="text", name="resume", cols="30", rows="10", value=`${films.resume}`)
         div.two__inputs
             p.edit__type Rating
             p.edit__type Image URL
