--- a/views/header_search_list.pug
+++ b/views/header_search_list.pug
@@ -9,5 +9,5 @@ html(lang="en")
     body 
         header.header__search
             form(action="/search/")
-                input.search__searcher__input(name="title" type="text" placeholder="Search for a title") 
+                input.search__searcher__input(name="title" type="search" placeholder="Search for a title") 
                 button.search__searcher__button(type="submit") GO
