--- a/views/create_movie.pug
+++ b/views/create_movie.pug
@@ -1,4 +1,4 @@
-include ./header_search_list.pug 
+include ./header.pug 
 div.separador_up
 main.searchone__container
     img.searchone__bg__img(src="/assets/create_bg.jpg")
