--- a/views/status200.pug
+++ b/views/status200.pug
@@ -20,6 +20,6 @@ html(lang="en")
                 p=`Resume: ${data.resume.substr(0,30)}...`
                 p=`Rating: ${data.rating}/10`
                 p=`Poster: ${data.poster.substr(0,30)}...`
-            a(href="http://localhost:3000/create")
-                button.error__button(type="click") BACK TO CREATE
+            a(href="http://localhost:3000/admin")
+                button.error__button(type="click") BACK TO MOVIES
 
