--- a/views/search_one.pug
+++ b/views/search_one.pug
@@ -31,11 +31,22 @@ main.searchone__container
                 button.back__button(type="click") BACK
             button.addFavorites(type="click")
                 img.addFavorites__button(type="img",src="/assets/corazon.png")
-    section.searchone__comments__section
-        p ALBERTO
-        p La peli esta bien pero no se que decir....
-        p PEDRO
-        p Yo la verad es que no la he visto
-    a.favorites__link(href="http://localhost:3000/mymovies")
-        button.gofavorites__button(type="click") MY MOVIES
+section.searchone__comments__title USERS REVIEWS
+section.searchone__comments__section   
+    article.comment__article
+        p.comment__name= `Author: ${revTwo[0]}`
+        p.comment__content= `Comment: ${revTwo[1]}`
+        p.comment__name= `Author: ${revTwo[2]}`
+        p.comment__content= `Comment: ${revTwo[3]}`
+        p.comment__name= `Author: ${revTwo[4]}`
+        p.comment__content= `Comment: ${revTwo[5]}`
+    article.comment__article
+        p.comment__name= `Author: ${revTwo[6]}`
+        p.comment__content= `Comment: ${revTwo[7]}`
+        p.comment__name= `Author: ${revTwo[8]}`
+        p.comment__content= `Comment: ${revTwo[9]}`
+        p.comment__name= `Author: ${revTwo[10]}`
+        p.comment__content= `Comment: ${revTwo[11]}`
+a.favorites__link(href="http://localhost:3000/mymovies")
+    button.gofavorites__button(type="click") MY MOVIES
     
