--- a/views/home.pug
+++ b/views/home.pug
@@ -11,3 +11,4 @@ main.main__container
         a(href="http://localhost:3000/")
             button.home__google__button(type="click") LOGIN WITH GOOGLE
         img.main__gif(src="assets/gif_home_ok.gif", type="gif")
+        a(href="/auth/google" id="google")
