fix passport without midlewares

--- a/views/home.pug
+++ b/views/home.pug
@@ -8,7 +8,6 @@ main.main__container
             button.home__signup__button(type="click") SIGN UP
         a(href="http://localhost:3000/login")
             button.home__login__button(type="click") LOG IN
-        a(href="http://localhost:3000/")
+        a(href="http://localhost:3000/auth/google")
             button.home__google__button(type="click") LOGIN WITH GOOGLE
         img.main__gif(src="assets/gif_home_ok.gif", type="gif")
-        a(href="/auth/google" id="google")
