--- a/views/header_admin.pug
+++ b/views/header_admin.pug
@@ -7,9 +7,10 @@ html(lang="en")
         link(rel="stylesheet", href="/css/styles.css")
         title FILMS
     body 
-        form(action="/admin", method="post").header__search
-            button.header__admin__logout__button(type="submit") LOGOUT
+        section.header__search
+            form(action="/admin", method="post")
+                button.header__admin__logout__button(type="submit") LOGOUT
             a(href="/dashboard") 
                 button.header__admin__dash__button(type="click") GO DASH  
- 
+    
             
