--- a/views/search_one.pug
+++ b/views/search_one.pug
@@ -1,8 +1,9 @@
 include ./header.pug 
-    a(href="/login") 
-        button.header__admin__logout__button(type="click") LOGOUT
-    a(href="/search") 
-        button.header__admin__dash__button(type="click") SEARCH  
+        section.header__search
+            form(action="/searchone", method="post")
+                button.header__admin__logout__button(type="submit") LOGOUT
+            a(href="/dashboard") 
+                button.header__admin__dash__button(type="click") GO DASH  
 div.separador_up
 main.searchone__container
     img.searchone__bg__img(src="/assets/form_bg.jpg")
