--- a/views/create_movie.pug
+++ b/views/create_movie.pug
@@ -33,7 +33,7 @@ main.searchone__container
             button.edit__button(type="submit") SAVE NEW 
             p.deleteFavorites
                 img.reset__button(type="img",src="/assets/reset.png")
-    a.favorites__link(href="http://localhost:3000/admin")
+    a.favorites__link(href="/admin")
         button.gofavorites__button(type="click") MOVIES
 script(src="js/createFilm.js")
 
