--- a/views/signup.pug
+++ b/views/signup.pug
@@ -21,6 +21,6 @@ main.main__container
         input.signup__url(type="text", name='profile_pic', required) 
         button.signup__button(type="submit") SIGN UP
         img.signup__gif(src="assets/gif_home_ok.gif", type="gif")
-a.favorites__link(href="http://localhost:3000/")
+a.favorites__link(href="/")
     button.gofavorites__button(type="click") BACK HOME
     script(src='js/onchage__signup.js')
