--- a/views/status200delete.pug
+++ b/views/status200delete.pug
@@ -11,6 +11,6 @@ html(lang="en")
             img.error400__img(src="/assets/200_delete.jpg")
             div.error400__text
                 p DELETE MOVIE SUCCESSFUL!
-            a(href="http://localhost:3000/admin")
+            a(href="/admin")
                 button.error__button(type="click") BACK TO MOVIES
 
