--- a/views/recover.pug
+++ b/views/recover.pug
@@ -11,6 +11,6 @@ main.main__container
         input.signup__pass2(type="password", name='password2', placeholder="Restrictions", required)
         button.signup__button(type="submit") SEND
         img.signup__gif(src="assets/gif_home_ok.gif", type="gif")
-a.favorites__link(href="http://localhost:3000/")
+a.favorites__link(href="/")
     button.gofavorites__button(type="click") BACK HOME
     script(src='js/onchage__signup.js')
