--- a/views/search_one.pug
+++ b/views/search_one.pug
@@ -27,7 +27,7 @@ main.searchone__container
         p.searchone__type  IMDB Rating
         p.searchone__info= `${films.imdbRating} / 10`
         div.searchone__botton__container
-            a(href="http://localhost:3000/search/")
+            a(href="/search/")
                 button.back__button(type="click") BACK
             button.addFavorites(type="click")
                 img.addFavorites__button(type="img",src="/assets/corazon.png")
@@ -47,6 +47,6 @@ section.searchone__comments__section
         p.comment__content= `Comment: ${revTwo[9]}`
         p.comment__name= `Author: ${revTwo[10]}`
         p.comment__content= `Comment: ${revTwo[11]}`
-a.favorites__link(href="http://localhost:3000/mymovies")
+a.favorites__link(href="/mymovies")
     button.gofavorites__button(type="click") MY MOVIES
     
